crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@bitwise_operations___bitwise_or.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Bitwise Operations - Bitwise Or"
input_file: mdtest/01-basics/07-bitwise.md
---
Source:
fn test_bitwise_or(x: u32, y: u32) -> u32 {
    let result = x | y;
    return result;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_bitwise_or {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 | (u32) %1
      return %2

  }

}
