crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@bitwise_operations___bitwise_xor_2.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Bitwise Operations - Bitwise Xor 2"
input_file: mdtest/01-basics/07-bitwise.md
---
Source:
fn test_bitwise_xor_immediates() -> u32 {
    let result = 69u32 ^ 420u32;
    return result;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_bitwise_xor_immediates {
    entry: 0

    0:
      %0 = 69 ^ (u32) 420
      return %0

  }

}
